--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6797,3 +6797,42 @@ table.center-aligned-table tr {
 .image-post{
     width: 100px;
 }
+
+.pagination>li>a, .pagination>li>span {
+
+    position: relative;
+    float: left;
+    padding: 6px 12px;
+    line-height: 1.6;
+    text-decoration: none;
+    color: #3097D1;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    margin-left: -1px;
+}
+
+.breadcrumb>li, .pagination {
+    display: inline-block;
+}
+
+.pagination>li>span:hover {
+    z-index: 2;
+    color: #216a94;
+    background-color: #eee;
+    border-color: #ddd;
+}
+
+.pagination {
+    padding-left: 0;
+    margin: 22px 0;
+    border-radius: 4px;
+}
+.pagination>li {
+    display: inline;
+}
+
+.text-center {
+    text-align: center;
+}
+
+
